// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection navbar renders correctly when signed in as admin 1`] = `

<nav id="collection-navbar"
     data-server-rendered="true"
     class="navbar navbar-dark navbar-expand-md"
>
  <div class="container">
    <a href="#/collection/playbills"
       target="_self"
       class="navbar-brand"
    >
      <span>
        In the Spotlight
      </span>
    </a>
    <button type="button"
            data-toggle="collapse"
            data-target="#main-nav-collapse"
            aria-controls="main-nav-collapse"
            aria-expanded="false"
            aria-label="Toggle navigation"
            class="
        hamburger
        hamburger--collapse
        navbar-toggler
        navbar-toggler-right"
    >
      <span class="hamburger-box">
        <span class="hamburger-inner">
        </span>
      </span>
    </button>
    <div id="main-nav-collapse"
         class="navbar-collapse collapse"
         style="display:none;"
    >
      <ul class="nav navbar-nav">
        <li class="nav-item">
          <a href="#/collection/playbills/about"
             target="_self"
             class="nav-link"
          >
            About
          </a>
        </li>
        <li class="nav-item">
          <a href="#/collection/playbills/projects"
             target="_self"
             class="nav-link"
          >
            Contribute
          </a>
        </li>
        <li class="nav-item">
          <a href="http://example.com/discuss"
             target="_self"
             aria-disabled="false"
             class="nav-link"
          >
            Discuss
          </a>
        </li>
        <li class="nav-item">
          <a href="#/collection/playbills/data"
             target="_self"
             class="nav-link"
          >
            Data
          </a>
        </li>
      </ul>
      <ul class="nav navbar-nav">
        <div id="announcements-list">
          <button id="announcements-toggle"
                  type="button"
                  class="nav-link d-none d-lg-flex flex-row btn btn-secondary"
          >
            <icon name="bell">
            </icon>
            <!---->
          </button>
          <nuxt-link to="[object Object]"
                     class="d-lg-none nav-link"
          >
            Notifications
          </nuxt-link>
          <span style="display:none;">
            <div id="announcements-container"
                 class="dropdown-menu-right d-none d-md-block card"
            >
              <div class="card-header">
                <div>
                  Notifications
                </div>
              </div>
              <div id="announcements">
              </div>
              <no-ssr>
                <infinite-loading class="infinite-loading">
                  <span slot="no-results">
                    <span>
                      No announcements have been made yet
                    </span>
                  </span>
                  <span slot="no-more">
                    <!---->
                  </span>
                </infinite-loading>
              </no-ssr>
            </div>
          </span>
        </div>
        <li class="nav-item b-nav-dropdown dropdown">
          <a href="#"
             aria-haspopup="true"
             aria-expanded="false"
             class="nav-link dropdown-toggle"
          >
            <span>
              JohnDoe
            </span>
          </a>
          <div role="menu"
               class="dropdown-menu dropdown-menu-right"
          >
            <a href="#/account/JohnDoe"
               role="menuitem"
               target="_self"
               class="dropdown-item"
            >
              Profile
            </a>
            <a href="#/account/JohnDoe/settings/profile"
               role="menuitem"
               target="_self"
               class="dropdown-item"
            >
              Settings
            </a>
            <span>
              <div role="separator"
                   class="dropdown-divider"
              >
              </div>
              <a href="#/admin/project/open"
                 role="menuitem"
                 target="_self"
                 class="dropdown-item"
              >
                Project Admin
              </a>
              <a href="#/"
                 role="menuitem"
                 target="_self"
                 class="dropdown-item active"
              >
                Collection Admin
              </a>
              <a href="#/admin/site/dashboard"
                 role="menuitem"
                 target="_self"
                 class="dropdown-item"
              >
                Site Admin
              </a>
            </span>
            <div role="separator"
                 class="dropdown-divider"
            >
            </div>
            <a role="menuitem"
               href="#"
               target="_self"
               aria-disabled="false"
               class="dropdown-item"
            >
              Sign Out
            </a>
          </div>
        </li>
      </ul>
    </div>
  </div>
</nav>

`;

exports[`Collection navbar renders correctly when signed in as non-admin 1`] = `

<nav id="collection-navbar"
     data-server-rendered="true"
     class="navbar navbar-dark navbar-expand-md"
>
  <div class="container">
    <a href="#/collection/playbills"
       target="_self"
       class="navbar-brand"
    >
      <span>
        In the Spotlight
      </span>
    </a>
    <button type="button"
            data-toggle="collapse"
            data-target="#main-nav-collapse"
            aria-controls="main-nav-collapse"
            aria-expanded="false"
            aria-label="Toggle navigation"
            class="
        hamburger
        hamburger--collapse
        navbar-toggler
        navbar-toggler-right"
    >
      <span class="hamburger-box">
        <span class="hamburger-inner">
        </span>
      </span>
    </button>
    <div id="main-nav-collapse"
         class="navbar-collapse collapse"
         style="display:none;"
    >
      <ul class="nav navbar-nav">
        <li class="nav-item">
          <a href="#/collection/playbills/about"
             target="_self"
             class="nav-link"
          >
            About
          </a>
        </li>
        <li class="nav-item">
          <a href="#/collection/playbills/projects"
             target="_self"
             class="nav-link"
          >
            Contribute
          </a>
        </li>
        <li class="nav-item">
          <a href="http://example.com/discuss"
             target="_self"
             aria-disabled="false"
             class="nav-link"
          >
            Discuss
          </a>
        </li>
        <li class="nav-item">
          <a href="#/collection/playbills/data"
             target="_self"
             class="nav-link"
          >
            Data
          </a>
        </li>
      </ul>
      <ul class="nav navbar-nav">
        <div id="announcements-list">
          <button id="announcements-toggle"
                  type="button"
                  class="nav-link d-none d-lg-flex flex-row btn btn-secondary"
          >
            <icon name="bell">
            </icon>
            <!---->
          </button>
          <nuxt-link to="[object Object]"
                     class="d-lg-none nav-link"
          >
            Notifications
          </nuxt-link>
          <span style="display:none;">
            <div id="announcements-container"
                 class="dropdown-menu-right d-none d-md-block card"
            >
              <div class="card-header">
                <div>
                  Notifications
                </div>
              </div>
              <div id="announcements">
              </div>
              <no-ssr>
                <infinite-loading class="infinite-loading">
                  <span slot="no-results">
                    <span>
                      No announcements have been made yet
                    </span>
                  </span>
                  <span slot="no-more">
                    <!---->
                  </span>
                </infinite-loading>
              </no-ssr>
            </div>
          </span>
        </div>
        <li class="nav-item b-nav-dropdown dropdown">
          <a href="#"
             aria-haspopup="true"
             aria-expanded="false"
             class="nav-link dropdown-toggle"
          >
            <span>
              JohnDoe
            </span>
          </a>
          <div role="menu"
               class="dropdown-menu dropdown-menu-right"
          >
            <a href="#/account/JohnDoe"
               role="menuitem"
               target="_self"
               class="dropdown-item"
            >
              Profile
            </a>
            <a href="#/account/JohnDoe/settings/profile"
               role="menuitem"
               target="_self"
               class="dropdown-item"
            >
              Settings
            </a>
            <!---->
            <div role="separator"
                 class="dropdown-divider"
            >
            </div>
            <a role="menuitem"
               href="#"
               target="_self"
               aria-disabled="false"
               class="dropdown-item"
            >
              Sign Out
            </a>
          </div>
        </li>
      </ul>
    </div>
  </div>
</nav>

`;

exports[`Collection navbar renders correctly when signed out 1`] = `

<nav id="collection-navbar"
     data-server-rendered="true"
     class="navbar navbar-dark navbar-expand-md"
>
  <div class="container">
    <a href="#/collection/playbills"
       target="_self"
       class="navbar-brand"
    >
      <span>
        In the Spotlight
      </span>
    </a>
    <button type="button"
            data-toggle="collapse"
            data-target="#main-nav-collapse"
            aria-controls="main-nav-collapse"
            aria-expanded="false"
            aria-label="Toggle navigation"
            class="
        hamburger
        hamburger--collapse
        navbar-toggler
        navbar-toggler-right"
    >
      <span class="hamburger-box">
        <span class="hamburger-inner">
        </span>
      </span>
    </button>
    <div id="main-nav-collapse"
         class="navbar-collapse collapse"
         style="display:none;"
    >
      <ul class="nav navbar-nav">
        <li class="nav-item">
          <a href="#/collection/playbills/about"
             target="_self"
             class="nav-link"
          >
            About
          </a>
        </li>
        <li class="nav-item">
          <a href="#/collection/playbills/projects"
             target="_self"
             class="nav-link"
          >
            Contribute
          </a>
        </li>
        <li class="nav-item">
          <a href="http://example.com/discuss"
             target="_self"
             aria-disabled="false"
             class="nav-link"
          >
            Discuss
          </a>
        </li>
        <li class="nav-item">
          <a href="#/collection/playbills/data"
             target="_self"
             class="nav-link"
          >
            Data
          </a>
        </li>
      </ul>
      <ul class="nav navbar-nav">
        <ul class="nav navbar-nav">
          <li class="nav-item">
            <a href="#/account/signin?next=%2F"
               target="_self"
               class="nav-link"
            >
              Sign in
            </a>
          </li>
          <li class="nav-button nav-item">
            <a href="#/account/register"
               target="_self"
               class="nav-link"
            >
              Sign up
            </a>
          </li>
        </ul>
      </ul>
    </div>
  </div>
</nav>

`;
